Adicionando Caminhos no MainViews